--- a/paper/automl-template.tex
+++ b/paper/automl-template.tex
@@ -107,7 +107,7 @@ $body$
     %
   \item Did you discuss any potential negative societal impacts of your work?
     %
-    \answerYes{}
+    \answerNA{I can't think of any particular negative societal impacts of a Bayesian workflow template}
     %
   \item Did you read the ethics review guidelines and ensure that your paper
     conforms to them? \url{https://2022.automl.cc/ethics-accessibility/}
@@ -170,12 +170,12 @@ $body$
     \texttt{README} with installation, and execution commands (either in the
     supplemental material or as a \textsc{url})?
     %
-    \answerYes{}
+    \answerYes{See \url{https://bibat.readthedocs.io/en/latest/_static/report.html} for instructions to reproduce the main example.}
     %
   \item Did you include a minimal example to replicate results on a small subset
     of the experiments or on toy data?
     %
-    \answerYes{}
+    \answerYes{See section "Generating Stan inputs" here \url{https://bibat.readthedocs.io/en/latest/_static/report.html\#preparing-the-data}}
     %
   \item Did you ensure sufficient code quality and documentation so that someone else
     can execute and understand your code?
@@ -185,12 +185,12 @@ $body$
   \item Did you include the raw results of running your experiments with the given
     code, data, and instructions?
     %
-    \answerNA{}
+    \answerNo{This is unnecessary as the results are easy to reproduce and the results are large files that would be awkward to store online}
     %
   \item Did you include the code, additional data, and instructions needed to generate
     the figures and tables in your paper based on the raw results?
     %
-    \answerYes{}
+    \answerNo{To reproduce the figures from raw data run "make analysis" from the folder \texttt{example\_projects/baseball}, as described in the instructions here \url{https://bibat.readthedocs.io/en/latest/\_static/report.html}}
     %
   \end{enumerate}
   %
@@ -224,7 +224,7 @@ $body$
     \item Did you include the new assets either in the supplemental material or as
     a \textsc{url} (to, e.g., GitHub or Hugging Face)?
     %
-    \answerYes{}
+    \answerYes{\url{https://github.com/teddygroves/bibat/}}
     %
   \end{enumerate}
   %
