--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -249,14 +249,15 @@
   langid = {english},
   file = {/Users/tedgro/Zotero/storage/7GGTD6UY/Box and Tiao - 1992 - Bayesian inference in statistical analysis.pdf}
 }
-
-@article{strumbeljPresentFutureSoftware,
-  title = {Past, {{Present}}, and {{Future}} of {{Software}} for {{Bayesian Inference}}},
-  author = {{\v S}trumbelj, Erik and {Bouchard-C{\^o}t{\'e}}, Alexandre and Corander, Jukka and Gelman, Andrew and Rue, H{\aa}vard and Murray, Lawrence and Pesonen, Henri and Plummer, Martyn and Vehtari, Aki},
-  abstract = {Software tools for Bayesian inference have undergone rapid evolution in the past three decades, following popularisation of the first generation MCMC-sampler implementations. More recently, exponential growth in the number of users has been stimulated both by the active development of new packages by the machine learning community and popularity of specialist software for particular applications. This review aims to summarize the most popular software and provide a useful map for a reader to navigate the world of Bayesian computation. We anticipate a vigorous continued development of algorithms and corresponding software in multiple research fields, such as probabilistic programming, likelihood-free inference, and Bayesian neural networks, which will further broaden the possibilities for employing the Bayesian paradigm in exciting applications. Key words and phrases: statistics, data analysis, MCMC, computation, probabilistic programming.},
-  langid = {english},
-  file = {/Users/tedgro/Zotero/storage/F55H2HPD/Štrumbelj et al. - Past, Present, and Future of Software for Bayesian.pdf},
-  year = {2024}
+@article{vstrumbelj2024past,
+  title={Past, Present and Future of Software for Bayesian Inference},
+  author={Strumbelj, Erik and Bouchard-C{\^o}t{\'e}, Alexandre and Corander, Jukka and Gelman, Andrew and Rue, H{\aa}vard and Murray, Lawrence and Pesonen, Henri and Plummer, Martyn and Vehtari, Aki},
+  journal={Statistical Science},
+  volume={39},
+  number={1},
+  pages={46--61},
+  year={2024},
+  publisher={Institute of Mathematical Statistics}
 }
 
 @misc{grovesteddySphincter2024,
@@ -303,4 +304,15 @@
   copyright = {MIT},
   howpublished = {copier-org},
   keywords = {cookiecutter,copier-template,hacktoberfest,project-template,python,scaffolding}
+}
+
+@misc{wardWardBrianCookiecuttercmdstanpywrapper2024,
+  title = {{{WardBrian}}/Cookiecutter-Cmdstanpy-Wrapper},
+  author = {Ward, Brian},
+  year = {2024},
+  month = jan,
+  url = {https://github.com/WardBrian/cookiecutter-cmdstanpy-wrapper},
+  urldate = {2024-02-26},
+  abstract = {Easily wrap a Stan model in a Python package},
+  keywords = {cookiecutter,cookiecutter-python,cookiecutter-template,python,stan}
 }
