Add hello world example to paper

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -316,3 +316,10 @@
   abstract = {Easily wrap a Stan model in a Python package},
   keywords = {cookiecutter,cookiecutter-python,cookiecutter-template,python,stan}
 }
+
+@misc{pipxdevelopersPipx2024,
+  title = {Pipx},
+  author = {{Pipx developers}},
+  year = {2024},
+  url = {https://github.com/pypa/pipx}
+}
