Mention lovelyplots in paper

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -323,3 +323,25 @@
   year = {2024},
   url = {https://github.com/pypa/pipx}
 }
+
+@misc{sheriff_lovelyplots_2022,
+  title = {{{LovelyPlots}}, a Collection of Matplotlib Stylesheets for Scientific Figures},
+  author = {Sheriff, Killian},
+  year = {2022},
+  month = jul,
+  doi = {10.5281/zenodo.6903936},
+  howpublished = {Zenodo}
+}
+
+@article{Hunter:2007,
+  title = {Matplotlib: {{A 2D}} Graphics Environment},
+  author = {Hunter, J. D.},
+  year = {2007},
+  journal = {Computing in Science \& Engineering},
+  volume = {9},
+  number = {3},
+  pages = {90--95},
+  publisher = {IEEE COMPUTER SOC},
+  doi = {10.1109/MCSE.2007.55},
+  abstract = {Matplotlib is a 2D graphics package used for Python for application development, interactive scripting, and publication-quality image generation across user interfaces and operating systems.}
+}
